* 2013-07-24 - martin.herfurth@open-xchange.com

 - Fix for bug 27591: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT
 - Fix for bug 27584: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT

* 2013-07-23 - tobias.friedrich@open-xchange.com

 - Fix for bug 27476: Implicitly add internal user in change exceptions if missing from imported iCal 
 - Fix for bug 27161: Pass DISTANT_FUTURE when deleting a folder via WebDAV 

* 2013-07-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 27663: Always include ORDER BY columns in SELECT clause when using UNION SELECTs 
 - Fix for bug 27496: Increment and decrement "NumberOfWebDAVUserConnections" when processing WebDAV requests
 - Fix for bug 27439: Enhanced documentation for "com.openexchange.caldav.interval.start" and -".end"
  
* 2013-07-22 - thorben.betten@open-xchange.com

 - Fix for bug 27669: Added null guard when counting SIEVE action commands
 - Fix for bug 27604: Fixed multiple problems occurring in customer environment
 - Fix for bug 27671: Allow an "insecure" XML parser implementation needed for Apache CXF v2.6.8

* 2013-07-19 - thorben.betten@open-xchange.com

 - Fix for bug 27539: Sanitize Content-Type header if 'javax.mail.internet.MimeMessage.saveChanges()' fails
 - Fix for bug 27645: Chunk-wise copy/move of messages from one account to another
 - Fix for bug 27639: Ignore trailing non-LDH characters on IDN-to-ACE conversion
 - Fix for bug 27656: Added missing package import

* 2013-07-18 - thorben.betten@open-xchange.com

 - Fix for bug 27232: Reconnect if mail part's folder has been closed in the meantime
 - Fix for bug 27641: Lowered log level for charset auto-detection triggered by invalid charset name

* 2013-07-16 - marc.arens@open-xchange.com

 - Fix for bug 27469: Stop checking aliases as soon as a valid match was found
   
* 2013-07-11 - marcus.klein@open-xchange.com/jan.bauerdick@open-xchange.com
