@@ -16,6 +16,7 @@ country_home=Country home
 country_other=Country other
 department=Department
 display_name=Display name
+distribution_list=Distribution list
 email1=Email 1
 email2=Email 2
 email3=Email 3
